force-app/main/default/objects/Tax_Bracket__mdt/Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <description>For variables related to the salary calculator</description>
    <label>Tax Bracket</label>
    <pluralLabel>Tax Brackets</pluralLabel>
</CustomObject>