force-app/main/default/objects/Tax_Bracket__mdt/fields/Ending_Salary__c.field-meta.xml
<CustomField>
    <fullName>Ending_Salary__c</fullName>
    <label>Ending Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>