force-app/main/default/objects/Tax_Bracket__mdt/fields/Prior_Aggregated_Tax__c.field-meta.xml
<CustomField>
    <fullName>Prior_Aggregated_Tax__c</fullName>
    <label>Prior Aggregated Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>