force-app/main/default/objects/Tax_Bracket__mdt/fields/Starting_Salary__c.field-meta.xml
<CustomField>
    <fullName>Starting_Salary__c</fullName>
    <label>Starting Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>